[package]
name = "herder"
description = "A client for Mastodon, a GNU Social-compatible microbbloging server."
version = "0.1.0"
authors = ["Joaquin R <globojorro@gmail.com>"]
license = "MIT"
repository = "https://github.com/saibatizoku/herder"
keywords = ["http", "rest", "client", "mastodon", "gnu social"]

[dependencies]
curl = "0.4"
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "master" }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
