[package]
name = "herder"
description = "A client for Mastodon, a GNU Social-compatible microbbloging server."
version = "0.1.2"
authors = ["Joaquin R <globojorro@gmail.com>"]
license = "MIT"
repository = "https://github.com/saibatizoku/herder"
keywords = ["http", "rest", "client", "mastodon", "gnu social"]

[dependencies]
curl = "0.4"
futures = "*"
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "master" }
tokio-core = "0.1"
tokio-curl = "0.1"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
url = "1.4"
